intento de transición a la tabla

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -45,30 +45,32 @@
     <h2>Quiero contactar con la empresa</h2>
     <!--cierre encabezado form-->
     <!--inicio form-->
+    
     <form action="enviar.php" method="post" enctype="text/plain">
         <input type="radio" name="sexo">
         <label for="">mujer</label>
         <input type="radio" name="sexo">
-        <label for="">hombre</label><br>
+        <label for="">hombre</label>
         <label for="nombre">nombre:</label>
-        <input type="text" name="nombre" placeholder="escribe tu nombre" required><br>
+        <input type="text" name="nombre" placeholder="escribe tu nombre" required>
         <label for="apellido">apellido:</label>
-        <input type="text" name="apellido" placeholder="escribe tu apellido" required><br>
-        <input type="date"><br>
+        <input type="text" name="apellido" placeholder="escribe tu apellido" required>
+        <input type="date">
         <select name="Estado civil">
             <option>soltero</option>
             <option>casado</option>
             <option>viudo</option>
         </select>
         <label for="E-mail">email:</label>
-        <input type="email" name="E-mail" placeholder="escribe tu correo"><br>
-        <label for="comentarios">comentarios:</label><br>
+        <input type="email" name="E-mail" placeholder="escribe tu correo">
+        <label for="comentarios">comentarios:</label>
         <textarea name="comentarios" id="" cols="20" rows="5" placeholder="Escríbenos todo lo que necesitas acá"></textarea><br>
         <input type="submit" value="Enviar comentarios">
-        <input type="reset" value="Borrar todo"><br>
+        <input type="reset" value="Borrar todo">
         <input type="checkbox"required>
         <label for="">Soy mayor de edad y quiero recibir información</label>
      </form>
+     </div>
      <!--cierre form-->
  <!-- inicio de footer -->
  <div class="footer">
