--- a/pages/historia.html
+++ b/pages/historia.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +14,7 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <title>historia</title>
 </head>
+
 <body>
     <header>
         <!--Inicia nuevo menú de navegación-->
@@ -38,62 +40,61 @@
                         </div>
                     </div>
                 </nav>
-        <!-- finaliza nuevo menu de navegacion -->
+                <!-- finaliza nuevo menu de navegacion -->
     </header>
-    
+
     <h1>historia</h1>
-    <table border="5" cellspacing="10" cellpadding="10" > 
-        <tr>
-            <th>Temporada</th>
-            <th>Campeón</th>
-            <th>Subcampeón</th>
-            <th>Resultado</th>
-            <th>Notas</th>
-        </tr>
-        <tr>
-<td>1955-1956</td>
-<td>Real Madrid</td>
-<td>Stade de Reims</td>
-<td>4-3</td>
-<td>
-    <ol>
-        <li>Primer campeón del torneo</li>
-    </ol>
-</td>
-</tr>
-<tr>
-<td>1956-1957</td>
-<td>Real Madrid</td>
-<td>A.C. Fiorentina</td>
-<td>2-0</td>
-<td></td>
-</tr>
-    </table>
-    <div class="animaciones">animaciones</div>
- <!-- inicio de footer -->
- <div class="footer">
-    <footer>
-        <p>todos los derechos son reservados por copyright</p>
-        <p>desarrollado por JGE</p>
-        <div class="redes">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-youtube"></i>
-        </div>
-    </footer>
+    <div class="transition" id="t1">
+         <table border="10">
+            <tr>
+                <th>Temporada</th>
+                <th>Campeón</th>
+                <th>Subcampeón</th>
+                <th>Resultado</th>
+                <th>Notas</th>
+            </tr>
+            <tr>
+                <td>1955-1956</td>
+                <td>Real Madrid</td>
+                <td>Stade de Reims</td>
+                <td>4-3</td>
+                <td>Primer campeón del torneo</td>  
+            </tr>
+            <tr>
+                <td>1956-1957</td>
+                <td>Real Madrid</td>
+                <td>A.C. Fiorentina</td>
+                <td>2-0</td>
+                <td>-----</td>
+            </tr>
+        </table>
+    </div>
+
+    <!-- inicio de footer -->
+    <div class="footer">
+        <footer>
+            <p>todos los derechos son reservados por copyright</p>
+            <p>desarrollado por JGE</p>
+            <div class="redes">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-youtube"></i>
+            </div>
+        </footer>
     </div>
     <!--fin del footer-->
 
 
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-        </script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
-        </script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-            integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous">
-        </script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
