Agrego nuevo formulario de prueba

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -72,6 +72,26 @@
      </form>
      </div>
      <!--cierre form-->
+
+     <!-- Inicia nuevo formulario bootstrap-->
+     <h2>Nuevo formulario de prueba con bootstrap</h2>
+     <form>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Dirección de email</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <small id="emailHelp" class="form-text text-muted">Nunca compartiremos tus datos con nadie</small>
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Contraseña</label>
+          <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="form-group form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Recordar</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Ingresar</button>
+      </form>
+      <!--finaliza nuevo formulario bootstrap-->
  <!-- inicio de footer -->
  <div class="footer">
     <footer>
