--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +14,7 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <title>contacto</title>
 </head>
+
 <body>
     <header>
         <!--Inicia nuevo menú de navegación-->
@@ -44,77 +46,70 @@
     <!--encabezado form-->
     <h2>Quiero contactar con la empresa</h2>
     <!--cierre encabezado form-->
-    <!--inicio form-->
-    
-    <form action="enviar.php" method="post" enctype="text/plain">
-        <input type="radio" name="sexo">
-        <label for="">mujer</label>
-        <input type="radio" name="sexo">
-        <label for="">hombre</label>
-        <label for="nombre">nombre:</label>
-        <input type="text" name="nombre" placeholder="escribe tu nombre" required>
-        <label for="apellido">apellido:</label>
-        <input type="text" name="apellido" placeholder="escribe tu apellido" required>
-        <input type="date">
-        <select name="Estado civil">
-            <option>soltero</option>
-            <option>casado</option>
-            <option>viudo</option>
-        </select>
-        <label for="E-mail">email:</label>
-        <input type="email" name="E-mail" placeholder="escribe tu correo">
-        <label for="comentarios">comentarios:</label>
-        <textarea name="comentarios" id="" cols="20" rows="5" placeholder="Escríbenos todo lo que necesitas acá"></textarea><br>
-        <input type="submit" value="Enviar comentarios">
-        <input type="reset" value="Borrar todo">
-        <input type="checkbox"required>
-        <label for="">Soy mayor de edad y quiero recibir información</label>
-     </form>
-     </div>
-     <!--cierre form-->
-
-     <!-- Inicia nuevo formulario bootstrap-->
-     <h2>Nuevo formulario de prueba con bootstrap</h2>
-     <form>
-        <div class="form-group">
-          <label for="exampleInputEmail1">Dirección de email</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <small id="emailHelp" class="form-text text-muted">Nunca compartiremos tus datos con nadie</small>
+    <!--inicio formulario con bootstrap-->
+    <form>
+        <div class="form-row">
+            <div class="col-md-6 mb-3">
+                <label for="validationDefault01">Nombre</label>
+                <input type="text" class="form-control" id="validationDefault01" value="José" required>
+            </div>
+            <div class="col-md-6 mb-3">
+                <label for="validationDefault02">Apellido</label>
+                <input type="text" class="form-control" id="validationDefault02" value="Escalona" required>
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="col-md-6 mb-3">
+                <label for="validationDefault03">E-mail</label>
+                <input type="text" class="form-control" id="validationDefault03" value="ejemplo@gmail.com" required>
+            </div>
+            <div class="col-md-3 mb-3">
+                <label for="validationDefault04">Sexo</label>
+                <select class="custom-select" id="validationDefault04" required>
+                    <option selected disabled value="">hombre</option>
+                    <option>mujer</option>
+                </select>
+            </div>
+            <div class="col-md-3 mb-3">
+                <label for="validationDefault05">Número de teléfono</label>
+                <input type="text" class="form-control" id="validationDefault05" required>
+            </div>
         </div>
         <div class="form-group">
-          <label for="exampleInputPassword1">Contraseña</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+                <label class="form-check-label" for="invalidCheck2">
+                    Acepto los términos y condiciones
+                </label>
+            </div>
         </div>
-        <div class="form-group form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Recordar</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Ingresar</button>
-      </form>
-      <!--finaliza nuevo formulario bootstrap-->
- <!-- inicio de footer -->
- <div class="footer">
-    <footer>
-        <p>todos los derechos son reservados por copyright</p>
-        <p>desarrollado por JGE</p>
-        <div class="redes">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-youtube"></i>
-        </div>
-    </footer>
+        <button class="btn btn-primary" type="submit">Suscribirme</button>
+    </form>
+    <!--Finaliza formulario con bootstrap-->
+    <!-- inicio de footer -->
+    <div class="footer">
+        <footer>
+            <p>todos los derechos son reservados por copyright</p>
+            <p>desarrollado por JGE</p>
+            <div class="redes">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-youtube"></i>
+            </div>
+        </footer>
     </div>
     <!--fin del footer-->
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-    integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous">
-</script>
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
