--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
         <div class="item item7"></div>
         <div class="item item8"></div>
     </section>
+    <h3>Página en remodelación</h3>
+    <p>
+        Disculpa estamos renovando nuestra página para ofrecerte un mejor servicio
+    </p>
+    
+
     <!-- inicio de footer -->
     <div class="footer">
         <footer>
