agregando seo y sass2

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="página web diseñada con bootstrap">
+    <meta name="keywords" content="real madrid, santiago bernabeu, cristiano ronaldo" 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/realmadridlogo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -63,7 +65,6 @@
     
 
     <!-- inicio de footer -->
-    <div class="footer">
         <footer>
             <p>todos los derechos son reservados por copyright</p>
             <p>desarrollado por JGE</p>
@@ -72,9 +73,7 @@
                 <i class="fa-brands fa-instagram"></i>
                 <i class="fa-brands fa-twitter"></i>
                 <i class="fa-brands fa-youtube"></i>
-            </div>
         </footer>
-    </div>
     <!--fin del footer-->
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
