--- a/pages/historia.html
+++ b/pages/historia.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Revive la historia del real madrid paso a paso">
     <link rel="shortcut icon" href="../img/realmadridlogo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -43,7 +44,7 @@
                 <!-- finaliza nuevo menu de navegacion -->
     </header>
 
-    <h1>historia</h1>
+    <h1>historia del real madrid</h1>
     <div class="transition" id="t1">
          <table border="10">
             <tr>
@@ -69,9 +70,10 @@
             </tr>
         </table>
     </div>
-
+    <div class="equipos">
+        <p>nuestros rivales</p>
+    </div>
     <!-- inicio de footer -->
-    <div class="footer">
         <footer>
             <p>todos los derechos son reservados por copyright</p>
             <p>desarrollado por JGE</p>
@@ -82,7 +84,6 @@
                 <i class="fa-brands fa-youtube"></i>
             </div>
         </footer>
-    </div>
     <!--fin del footer-->
 
 
