se incluye mixin para consigna

--- a/pages/empresas.html
+++ b/pages/empresas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Descubre todo lo que no sabias del real madrid">
     <link rel="shortcut icon" href="../img/realmadridlogo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -50,7 +51,7 @@
         </div>
         <!--finaliza jumbotron-->
     </header>
-    
+    <H2>Conoce los mitos y verdades de los más grandes jugadores del club merengue</H2>
     <div class="boxmodel">
     <p>La leyenda del club más grande de todos los tiempos se cimienta sobre unos valores que son los que han ido forjando una entidad que es lider en lo deportivo, en lo social, en lo solidario y en lo económico</p>
     </div>
