--- a/pages/historia.html
+++ b/pages/historia.html
@@ -44,7 +44,7 @@
                 <!-- finaliza nuevo menu de navegacion -->
     </header>
 
-    <h1>historia del real madrid</h1>
+    <h1>Historia del Real madrid</h1>
     <div class="transition" id="t1">
          <table border="10">
             <tr>
@@ -70,8 +70,12 @@
             </tr>
         </table>
     </div>
+    <h2>Revive como vencimos al barcelona, al munich y al inter de milan</h2>
     <div class="equipos">
         <p>nuestros rivales</p>
+    </div>
+    <div class="realmixin">
+    <p>Acá pruebo mixin luego veo si queda en el proyecto final</p>
     </div>
     <!-- inicio de footer -->
         <footer>
