--- a/pages/productos.html
+++ b/pages/productos.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="enterate de todos los productos del real madrid">
     <link rel="shortcut icon" href="../img/realmadridlogo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -43,7 +44,7 @@
         <!-- finaliza nuevo menu de navegacion -->
     </header>
 
-    <h1>productos</h1>
+    <h1>productos del real madrid</h1>
 
     <div class="container"></div>
     <div class="row">
@@ -83,7 +84,7 @@
          </div>
         </div>
        
-        <h2>Recorridos por las instalaciones del estadio</h2>
+        <h2>Recorridos por las instalaciones del estadio Santiago bernabeu</h2>
         <div class="futbol"></div>
         <!-- inicio de footer -->
     <footer>
