Seo en todas las pag y video

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="página web diseñada con bootstrap">
-    <meta name="keywords" content="real madrid, santiago bernabeu, cristiano ronaldo" 
+    <meta name="keywords" content="real madrid, santiago bernabeu, cristiano ronaldo">
+    <meta name="author" content="Jose Escalona" />
+    <meta name="copyright" content="Jose Escalona" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/realmadridlogo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -62,7 +64,9 @@
     <p>
         Disculpa estamos renovando nuestra página para ofrecerte un mejor servicio
     </p>
-    
+    <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_uFTLtFIBfI" allowfullscreen></iframe>
+      </div>
 
     <!-- inicio de footer -->
         <footer>
