--- a/pages/historia.html
+++ b/pages/historia.html
@@ -46,7 +46,7 @@
 
     <h1>Historia del Real madrid</h1>
     <div class="transition" id="t1">
-         <table border="10">
+         <table class="table table-hover">
             <tr>
                 <th>Temporada</th>
                 <th>Campeón</th>
@@ -67,6 +67,27 @@
                 <td>A.C. Fiorentina</td>
                 <td>2-0</td>
                 <td>-----</td>
+            </tr>
+            <tr>
+                <td>1957-1958</td>
+                <td>Real Madrid</td>
+                <td>A.C Milan</td>
+                <td>3-2</td>
+                <td>Primera final definida en prorroga</td>  
+            </tr>
+            <tr>
+                <td>1958-1959</td>
+                <td>Real Madrid</td>
+                <td>Stade de Reims</td>
+                <td>2-0</td>
+                <td>Gol más rápido en una final</td>  
+            </tr>
+            <tr>
+                <td>1959-1960</td>
+                <td>Real Madrid</td>
+                <td>Eintracht Frankfurt</td>
+                <td>7-3</td>
+                <td>Final con más goles</td>  
             </tr>
         </table>
     </div>
