--- a/pages/productos.html
+++ b/pages/productos.html
@@ -44,7 +44,7 @@
         <!-- finaliza nuevo menu de navegacion -->
     </header>
 
-    <h1>productos del real madrid</h1>
+    <h1>Viaja por el mundo con nuestro club</h1>
 
     <div class="container"></div>
     <div class="row">
