--- a/pages/productos.html
+++ b/pages/productos.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="enterate de todos los productos del real madrid">
+    <meta name="keywords" content="comprar productos del real madrid, cuanto vale viajar con real madrid, recorridos al estadio santiago bernabeu">
+    <meta name="author" content="Jose Escalona" />
+    <meta name="copyright" content="Jose Escalona" />
     <link rel="shortcut icon" href="../img/realmadridlogo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
