mayores modificaciones de estilo

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -90,7 +90,7 @@
         <button class="btn btn-primary" type="submit">Suscribirme</button>
     </form>
     <h3>Términos y condiciones</h3>
-    <p class="legales"> EAL MADRID, con domicilio social en la Avenida de Concha Espina, nº 1 de Madrid, España, T. +34 91 398 43 00 y C.I.F. número G-28034718, está inscrita en el Registro de Entidades Deportivas de la Comunidad de Madrid, con el número 849 mediante Resolución de 23 de junio de 1988.
+    <p class="legales"> REAL MADRID, con domicilio social en la Avenida de Concha Espina, nº 1 de Madrid, España, T. +34 91 398 43 00 y C.I.F. número G-28034718, está inscrita en el Registro de Entidades Deportivas de la Comunidad de Madrid, con el número 849 mediante Resolución de 23 de junio de 1988.
 
         El acceso al Sitio Web es gratuito salvo en lo relativo al coste de la conexión a través de la red de telecomunicaciones suministrada por el proveedor de acceso contratado por los usuarios.
         
