--- a/pages/empresas.html
+++ b/pages/empresas.html
@@ -56,7 +56,9 @@
     </header>
     <H2>Conoce los mitos y verdades de los más grandes jugadores del club merengue</H2>
     <div class="boxmodel">
-    <p>La leyenda del club más grande de todos los tiempos se cimienta sobre unos valores que son los que han ido forjando una entidad que es lider en lo deportivo, en lo social, en lo solidario y en lo económico</p>
+    <p>El Real Madrid Club de Fútbol, más conocido simplemente como Real Madrid, es una entidad polideportiva con sede en Madrid, España. Fue declarada oficialmente registrada como club de fútbol por sus socios el 6 de marzo de 1902 con el objeto de la práctica y desarrollo de este deporte —si bien sus orígenes datan del año 1900,7 y su denominación de (Sociedad) Madrid Foot-ball Club de noviembre de 1901—, siendo el quinto club fundado en la capital. Tuvo a Julián Palacios y los hermanos Juan Padrós y Carlos Padrós como principales valedores de su creación. 
+        Identificado por su color blanco —del que recibe el apelativo de blancos o merengues es uno de los cuatro clubes profesionales de fútbol del país cuya entidad jurídica no es la de sociedad anónima deportiva (S. A. D.), ya que su propiedad recae en sus más de 90 000 socios. Otra salvedad comparte con el Athletic Club y el Fútbol Club Barcelona al participar sin interrupción en la máxima categoría de la Liga Nacional de Fútbol Profesional, la Primera División de España, desde su establecimiento en 1929. En ella posee los honores de haber sido el primer líder histórico de la competición, el de club con más títulos, y el de la máxima puntuación en una sola edición.
+        </p>
     </div>
 
     <section class="fichajes container-fluid">
